--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "preview": "vite preview",
-    "fetch-data": "tsx scripts/fetch-housing-data.ts"
+    "fetch-data": "tsx scripts/fetch-housing-data.ts",
+    "build-zcta": "tsx scripts/build-zcta.ts"
   },
   "dependencies": {
     "@turf/helpers": "^7.1.0",
@@ -26,6 +27,8 @@
     "@vitejs/plugin-react": "^4.3.4",
     "adm-zip": "^0.5.16",
     "csv-parse": "^5.6.0",
+    "mapshaper": "^0.6.113",
+    "playwright": "^1.58.2",
     "tailwindcss": "^4.0.0",
     "tsx": "^4.19.0",
     "typescript": "~5.6.2",
