--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "build": "tsc -b && vite build",
     "preview": "vite preview",
     "fetch-data": "tsx scripts/fetch-housing-data.ts",
-    "build-zcta": "tsx scripts/build-zcta.ts"
+    "build-zcta": "tsx scripts/build-zcta.ts",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:e2e": "playwright test"
   },
   "dependencies": {
     "@turf/helpers": "^7.1.0",
@@ -25,6 +28,7 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
+    "@vitest/coverage-v8": "^4.0.18",
     "adm-zip": "^0.5.16",
     "csv-parse": "^5.6.0",
     "mapshaper": "^0.6.113",
@@ -33,6 +37,7 @@
     "tsx": "^4.19.0",
     "typescript": "~5.6.2",
     "vite": "^6.0.0",
+    "vitest": "^4.0.18",
     "xlsx": "^0.18.5"
   }
 }
